--- a/main/style.css
+++ b/main/style.css
@@ -1,7 +1,36 @@
 body {
   text-align: center;
-  background-color: rgb(89, 62, 62);
-  color: wheat;
+  background-image: url(/pictures/backGround.jpg);
+  color: rgba(171, 179, 182, 0.983);
+  background-size: cover;
+}
+.dark-mode-btn {
+  background-color: #909d91;
+  border: 10px;
+  color: rgba(0, 0, 0, 0.933);
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 6px;
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+.dark-mode .dark-mode-btn {
+  color: #ffffff;
+  background-color: #8d8282;
+}
+.dark-mode {
+  background-color: black;
+  color: white;
+  cursor: pointer;
+}
+.dark-mode footer {
+  color: #ffffff;
+}
+.dark-mode .level-btn {
+  color: #ffffff;
+  background-color: #8d8282;
 }
 
 table {
@@ -10,7 +39,9 @@ table {
   width: 250px;
   height: 250px;
 }
-
+.dark-mode td {
+  background-color: rgb(0, 0, 0);
+}
 td {
   height: 20px;
   width: 20px;
@@ -27,23 +58,24 @@ td {
 footer {
   text-align: center;
   padding: 10px;
-  color: rgb(0, 0, 0);
+  color: rgba(171, 179, 182, 0.983);
   font-size: 20px;
-}
-footer :hover {
-  color: #7b7b7b;
 }
 
 .level-btn {
   background-color: #909d91;
   border: 10px;
+  height: 80px;
+  width: 110px;
   color: rgba(0, 0, 0, 0.933);
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
   margin: 4px 2px;
+  margin-top: 10px;
   cursor: pointer;
+  border-radius: 50%;
 }
 
 .lives {
